--- a/CarnetAdresseApp/CarnetAdresseApp.csproj
+++ b/CarnetAdresseApp/CarnetAdresseApp.csproj
@@ -197,5 +197,9 @@
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-send-to-printer-24.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
